--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,19 @@
     <link rel="stylesheet" href="CSS\estilos.css"
   </head>
   <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p> Y este es el parrafo de inicio</p>
+    <div id="container">
+      <div id ="post">
+        <h1> Este es el título
+          atractivo e interesante del 
+          post
+        </h1>
+        <p>Y este es el parrafo de 
+          inicio donde vamos a explicar
+          las cosas que se pueden hacer en
+          las ramas
+        </p>
+      </div>
+    </div>
   </body>
 
 </html>
