Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        cabecera
+        Hyperblog
+        <span id="tagline">Tu blog de cabecera</span>
       </div>
       <div id ="post">
         <h1> Este es el título
@@ -18,6 +19,7 @@
           las cosas que se pueden hacer en
           las ramas
         </p>
+        <p>Suscribete y dale like</p>
       </div>
     </div>
   </body>
