--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,13 @@
           las cosas que se pueden hacer en
           las ramas
         </p>
+        <p>
+          Los bloogs son la mejor forma de compartir
+          información y tus idead. Mucho mas que ir a
+          conferencias o salir en youtube. Excepto si 
+          eres un rockstar. Pero estadísticamente no 
+          lo eres ... por ahora.
+        </p>
       </div>
     </div>
   </body>
