--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>El titulo del post modificado</title>
+    <title>Binevenidos a Hyperblog</title>
     <link rel="stylesheet" href="CSS\estilos.css"
   </head>
   <body>
